--- a/src/App.css
+++ b/src/App.css
@@ -672,6 +672,9 @@ video {
 .cursor-pointer {
   cursor: pointer;
 }
+.cursor-default {
+  cursor: default;
+}
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -1468,6 +1471,14 @@ body {
 
 .active\:opacity-100:active {
   opacity: 1;
+}
+.cursor-pointer{
+  cursor: pointer;
+}
+
+.disable{
+  opacity: 0.5;
+  cursor: not-allowed;
 }
 
 @media (min-width: 768px) {
