--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,25 @@
   height: 50px;
 } 
 
+/* Customize the scrollbar */
+.element-with-scrollbar::-webkit-scrollbar {
+  height: 2px;
+}
+
+.element-with-scrollbar::-webkit-scrollbar-track {
+  
+  border-radius: 10px;
+}
+
+.element-with-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+}
+
+.element-with-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+} 
+
 /*
 1. Use a consistent sensible line-height in all browsers.
 2. Prevent adjustments of font size after orientation changes in iOS.
