--- a/src/components/ui/modal/QuizAddModal.module.css
+++ b/src/components/ui/modal/QuizAddModal.module.css
@@ -19,7 +19,7 @@
     position: relative;
     max-width: 600px;
     width: 100%;
-    max-height: 100%;
+    max-height: 85%;
     overflow-y: auto;
   }
   .modalContent h2 {
@@ -123,6 +123,33 @@
       background-color: #4e99a6;
       color: #fff;
     }
+
+    /* checkbox input style */
+    .checkbox{
+      width: 100%;
+      margin-top: 10px;
+      margin-left: 5px;
+    }
+    .checkbox input[type=checkbox] {
+      margin-right: 10px;
+      position: relative;
+    outline: none;
+    font-size: 1.2rem;
+    color: #fff;
+    margin-top: 8px;
+    
+    padding: 0 15px;
+    background: linear-gradient(135deg, #0F1729,#080E1B);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    }
+    .checkbox label {
+      font-size: 16px;
+      line-height: 1.5;
+    }
+    input[type=checkbox]:hover {
+  cursor: pointer;
+  filter: brightness(90%);
+}
   /*Responsive*/
   @media screen and (max-width: 500px) {
     .form .column {
