--- a/src/App.css
+++ b/src/App.css
@@ -1258,6 +1258,7 @@ body {
 .assignment-status {
   display: flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
   -moz-column-gap: 0.5rem;
   column-gap: 0.5rem;
 }
@@ -1267,6 +1268,7 @@ body {
   border-width: 2px;
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+  margin-bottom: 0.8rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
   --tw-text-opacity: 1;
